[package]
name = "miniload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
clap = { version = "4.5.4", features = ["derive"] }
surf = "2.3.2"
lowcharts = "0.5.8"
clearscreen = "3.0.0"
terminal-emoji = "0.4.1"
